--- a/BT_S-Group/BT_Hover/style.css
+++ b/BT_S-Group/BT_Hover/style.css
@@ -11,12 +11,16 @@ body {
   height: 50vh;
   margin: 30px;
   overflow: hidden;
+  overflow-x: hidden;
   position: relative;
 }
 .block > img {
-  width: 100%;
+  width: 110%;
   height: 100%;
   position: relative;
+  display: block;
+}
+#img1 {
   opacity: 0.8;
 }
 .foot {
@@ -35,6 +39,8 @@ body {
 h2 {
   font-weight: 300;
   letter-spacing: 1px;
+}
+.title1 {
   transition: all 0.9s ease;
   transform: translateY(40%);
 }
@@ -75,7 +81,7 @@ h2 {
   transition: all 0.5s ease;
   transform: translateY(-100%);
 }
-.block1:hover h2 {
+.block1:hover .title1 {
   transition: all 0.9s ease;
   transform: translateY(-10%);
 }
@@ -89,4 +95,116 @@ h2 {
 }
 .block1:hover .icon > a:nth-child(2) {
   transition-delay: 0.15s;
+}
+.img2 {
+  animation: moveright 0.6s ease forwards;
+  animation-play-state: running;
+  right: -10%;
+}
+.bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(170, 210, 255, 0.164);
+  opacity: 1;
+  transition: all 0.5s ease;
+}
+.block2:hover .bg {
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+.block2 {
+  display: flex;
+  justify-content: flex-end;
+}
+.block2:hover img {
+  animation: moveleft 0.6s ease forwards;
+  animation-play-state: running;
+}
+@keyframes moveright {
+  from {
+    right: -10%;
+  }
+  to {
+    right: 0;
+  }
+}
+@keyframes moveleft {
+  from {
+    right: 0%;
+  }
+  to {
+    right: -10%;
+  }
+}
+.title2 {
+  font-size: 25px;
+  margin-bottom: 200x;
+}
+.text2 {
+  color: white;
+  font-size: 14px;
+  padding: 0 25px;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 1px;
+  text-align: left;
+  position: absolute;
+  bottom: 0%;
+  left: 8%;
+  transition: transform 0.5s ease;
+  transform: translateY(0%);
+  z-index: 5;
+}
+.block2:hover .text2 {
+  transition: transform 0.5s ease;
+  transform: translateY(-30%);
+}
+.text3 {
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+.block2:hover .text3 {
+  opacity: 1;
+  transition: all 0.5s ease;
+}
+.block3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+.img3 {
+  transform: scale(1);
+  transition: all 0.3s ease;
+  opacity: 1;
+}
+.block3:hover #img3 {
+  transform: scaleX(0.85) scaleY(0.93);
+  transition: all 0.3s ease;
+}
+.title3 {
+  position: absolute;
+  font-size: 30px;
+  color: white;
+  font-family: "Raleway", sans-serif;
+  top: 40px;
+  transition: transform 0.5s ease;
+  transform: translateY(0%);
+}
+.block3:hover .title3 {
+  transition: transform 0.5s ease;
+  transform: translateY(-80%);
+}
+.text4 {
+  position: absolute;
+  top: 53px;
+  color: white;
+  font-family: "Raleway", sans-serif;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+.block3:hover .text4 {
+  opacity: 1;
+  transition: all 0.5s ease;
 }
